--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ services:
 - elasticsearch
 rvm:
 - 2.1.4
+deploy:
+  provider: heroku
+  api_key:
+    secure: wL0p/VcWUF+gi3drTasUx7R8RfMbacFLgjd9CiuX9/MSl6SupVedVALYCHczwHbQGNws8VncQVkGP6CtvuxXtDGzgzN9MUoFiM0KKI4bwTDkmGlTgncJE5kb625ZURFNvD5vVc5ISOk0ixqVKryyTGDT5aXZm3PMt2+LjkO+NiA=
+  app: oa-jess
+  on:
+    repo: OpenAddressesUK/jess
